[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/WorldMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/UI.gd" type="Script" id=3]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=4]

[sub_resource type="InputEventAction" id=1]
action = "ui_start"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="HealthUI" parent="." instance=ExtResource( 4 )]
margin_left = 2.0
margin_top = 2.0
margin_right = 69.0
margin_bottom = 20.0

[node name="WorldMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="WorldMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WorldMenu/CenterContainer"]
margin_left = 133.0
margin_top = 60.0
margin_right = 186.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="WorldMenu/CenterContainer/VBoxContainer"]
margin_right = 53.0
margin_bottom = 12.0
shortcut = SubResource( 2 )
text = "Continue"

[node name="SaveButton" type="Button" parent="WorldMenu/CenterContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 53.0
margin_bottom = 28.0
text = "Save"

[node name="OptionsButton" type="Button" parent="WorldMenu/CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 53.0
margin_bottom = 44.0
text = "Options"

[node name="QuitButton" type="Button" parent="WorldMenu/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 53.0
margin_bottom = 60.0
text = "Main Menu"
[connection signal="pressed" from="WorldMenu/CenterContainer/VBoxContainer/ContinueButton" to="WorldMenu" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="WorldMenu/CenterContainer/VBoxContainer/OptionsButton" to="WorldMenu" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="WorldMenu/CenterContainer/VBoxContainer/QuitButton" to="WorldMenu" method="_on_QuitButton_pressed"]
